# DjangoBase

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
core/apps/interfaces/: inteface.py
core/apps/users/: models.py  urls.py
core/apps/users/api/: serializers.py  views.py
core/apps/users/repo/: interface.py  repository.py
core/apps/users/services/: email.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
